update docs and tests

--- a/package.json
+++ b/package.json
@@ -31,14 +31,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "find-up": "3.0.0",
-    "jszip": "3.2.1",
-    "node-fetch": "2.3.0",
-    "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "rimraf": "2.6.3",
-    "rollup": "1.7.4",
-    "rollup-plugin-hashbang": "2.2.2"
+    "rollup": "1.7.4"
   },
   "devDependencies": {
     "@babel/core": "7.4.0",
@@ -47,9 +40,7 @@
     "@babel/preset-react": "7.0.0",
     "@babel/preset-typescript": "7.3.3",
     "jsdoc-md": "2.1.0",
-    "node-popup": "0.1.14",
     "pre-commit": "1.2.2",
-    "rimraf": "2.6.3",
     "rollup-plugin-babel": "4.3.2",
     "tape": "4.10.1",
     "tslint": "5.14.0",
